--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div id="admin-bar">
         <div id="admin-menu">
             <div id="board-tools">
-                <h1>BUGBOARD</h1>
+                <img id="main-logo" src="img/main-logo.png">
                 <a href="javascript:void(0)" data-bind="click: loadDashboard"><i class="icon-upload icon-white"></i> Load Dashboard</a>
                 <br>
                 <a href="javascript:void(0)" data-bind="click: saveDashboard"><i class="icon-download icon-white"></i> Save Dashboard</a>
@@ -72,6 +72,7 @@
     <a id="toggle-header" href="javascript:void(0)" data-bind="click: toggleEditing"><i class="icon-wrench icon-white"></i></a>
 </header>
 <div class="gridster">
+    <img id="dash-logo" src="img/dash-logo.png">
     <ul data-bind="grid: true, template: {name: 'widget-template', foreach: widgets}">
     </ul>
 </div>
